# parmail

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  STATUS.md  fetch_emails.sh  models.default.json
src/: analysis.rs  email.rs  export.rs  input.rs  lambda.rs  lib.rs  main.rs  models.rs  output.rs  processor.rs  s3.rs  server.rs  ses.rs  storage.rs
src/extractor/: extractor.rs  lambda.rs  mod.rs
terraform/: confirmer.tf  contact_template.json  domain.tf  ec2.tf  extractor.tf  gatekeeper.tf  iam.tf  lambda.tf  main.tf  register_domain.sh  s3.tf  ses.tf  sns.tf  sqs.tf  terraform.tfstate.1781661500.backup  variables.tf
test_data/: bellevue_forward.eml  confirm_1.eml  confirm_2.eml  confirm_3.eml  sns_s3_event.json  sqs_s3_event.json
tests/: integration_test.rs
tests/fixtures/: bedrock_bad_response.json  bedrock_good_response.json  manifest_tool_use.json  s3_event_multiple.json  s3_event_single.json
