[package]
name = "parmail"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "parmail"
path = "src/main.rs"

[dependencies]
anyhow = "1"
arrow = { version = "54", features = ["prettyprint"] }
parquet = { version = "54", features = ["arrow"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-sdk-bedrockruntime = "1"
aws-smithy-types = "1"
aws-sdk-sts = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
indexmap = "2"
indicatif = "0.17"
lambda_runtime = "0.13"
mail-parser = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3"
