[package]
name = "parmail"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "parmail-interpreter"
path = "src/bin/interpreter.rs"

[[bin]]
name = "parmail-confirmer"
path = "src/bin/confirmer/main.rs"

[dependencies]
anyhow = "1"
backon = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-sdk-bedrockruntime = "1"
aws-smithy-types = "1"
aws-sdk-sts = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
indexmap = "2"
indicatif = "0.17"
lambda_runtime = "0.13"
mail-parser = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
phf = { version = "0.11", features = ["macros"] }
regex = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
aws-sdk-sesv2 = "1"

[dev-dependencies]
tempfile = "3"
